--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: ruby
 Priority: optional
 Maintainer: Pierre Carrier <pierre@spotify.com>
 DM-Upload-Allowed: yes
-Build-Depends: debhelper (>= 7.0.50~), gem2deb (>= 0.2.3~), ruby-patron
+Build-Depends: debhelper (>= 7.0.50~), gem2deb (>= 0.2.3~), ruby-patron, ruby-json
 Standards-Version: 3.9.1
 Homepage: https://github.com/spotify/moob
 XS-Ruby-Versions: all
